fixed .info-project height on mobile/tablet and bottom margins on desktop (#337)

--- a/source/stylesheets/modules/client-work/_m-eqipia.scss
+++ b/source/stylesheets/modules/client-work/_m-eqipia.scss
@@ -5,6 +5,10 @@
     }
   }
 
+  .info-project {
+    height: auto;
+  }
+
   .info-text-logo {
     margin-left: 10px;
     max-width: 100px;
@@ -60,6 +64,10 @@
       left: -5vw;
       margin: 0;
       width: 530px;
+    }
+
+    .info-project {
+      margin-bottom: 80px;
     }
   }
 }
